JackettUpdate Verison 1.3 Beta
* Cleaned up some verbage of output
* Changed tar to not vommit so much output into the log

JackettUpdate Verison 1.2 Beta (Rolled 5/17/2020 as breakfix)
* Corrected critical exception error caused by not using () on the end of one instance of timestamp() func

JackettUpdate Version 1.1 Beta (Rolled 5/17/2020)
* Fixed issue with incorrect URL (missed a t in jackett) in the selfupdater URL for this repo
* Corrected some default option errors in configupdate, the defaults are different for Jackett than Emby this script was forked form
* Fixed an incorrect variable in configsetup. One of the servstop variables made it into the servstart logic block
* Updated README.md file for use with Jackett
* Added systemd service name to configupdate
* Changed wording for server start and stop from manual to automatic (made more sense)
* Reworked handling of server stop/start (so it now works, silly bools) 
* Added more output to indicate what the script is currently doing


JackettUpdate version 1.0 Beta (Rolled 5/16/2020)
* Converted Embyupdate to jackettupdate
* Staying at this version till I get it working as expected